Fix underline overflow in Notes Page

--- a/opt/underline_tertiaryPanel-itemFocus.css
+++ b/opt/underline_tertiaryPanel-itemFocus.css
@@ -4,6 +4,7 @@ Notes Page
 
 ._2mL2HfT5AkDXRi1YBnRWKa:focus {
     position: relative;
+    overflow: hidden;
 }
 
 ._2mL2HfT5AkDXRi1YBnRWKa:focus::after {
